--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
   <!-- Firebase Reference -->
-  <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
 
   <!-- Moment.js Reference -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
@@ -30,7 +30,7 @@
 
 <body>
 
-  <!-- Employee Tracker -->
+  <!-- Train Schedule -->
   <div class="container">
 
     <!-- Jumbotron -->
@@ -43,11 +43,11 @@
 
       <div class="col-md-12">
 
-        <!-- Current Employees-->
+        <!-- Current Trains-->
         <div class="card mb-4">
           <div class="card-header">Current Train Schedule</div>
           <div class="card-body">
-            <table class="table table-sm table-hover" id='employee-table'>
+            <table class="table table-sm table-hover" id='train-table'>
               <thead>
                 <tr>
                   <th scope="col">Train Name</th>
@@ -58,6 +58,7 @@
                 </tr>
               </thead>
               <tbody>
+               
               </tbody>
             </table>
           </div>
@@ -67,7 +68,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <!-- Add Employee  -->
+        <!-- Add Train  -->
         <div class="card mb-4">
           <div class="card-header">Add Train</div>
           <div class="card-body">
@@ -84,11 +85,11 @@
               </div>
               <div class="form-group">
                 <label for="first-train-input">First Train Time (HH:mm-military time)</label>
-                <input class="form-control" id="start-input" placeholder=" " type="text">
+                <input class="form-control" id="first-train-input" placeholder=" " type="text">
               </div>
               <div class="form-group">
                 <label for="frequency-input">Frequency (min)</label>
-                <input class="form-control" id="rate-input" placeholder=" " type="text">
+                <input class="form-control" id="frequency-input" placeholder=" " type="text">
               </div>
               <button class="btn btn-primary float-left" id="add-train-button">Submit</button>
             </form>
